--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<Html lang= "pt-BR"> 
+<Html lang="pt-BR">
+
 <head>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +30,7 @@
     <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
+            <a href="<iframe width="560" height="315" src="https://www.youtube.com/embed/X4wge_avH2s?si=rvfRjkjnz0aC-Av0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>">
                 <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
@@ -48,4 +49,5 @@
     </section>
 
 </body>
+
 </html>
