--- a/index.html
+++ b/index.html
@@ -1,52 +1,83 @@
-<Html lang="pt-BR">
+<!DOCTYPE html>
+<html lang="pt-br">
 
 <head>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-        rel="stylesheet">
-    <title>Cleitonflix</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/icon.jpg" type="image/png">
+    <link rel="stylesheet" href="primeiro_ano.css">
+    <title>AluraFlix</title>
 </head>
 
 <body>
-    <header>CLEITONFLIX</header>
+    <header>
+        <h1>Historia Completa De Berserk</h1>
+    </header>
 
-    <section class="chamada">
-        <div class="chamada-texto">
-            <h1>ATRAVÉS DO ARANHAVERSO</h1>
-            <p>#homem-aranha</p>
+    <section class="menu">
+        <div class="texto">
+            <a href="form.html">#Historia Completa De Berserk</a>
+            <p class="texto-resumo">🔥 <b>DragonSoul</b> é o time de elite da LigaAlfaTech, formado por mentes
+                brilhantes e corações indomáveis.
+                Criado para representar o ápice da habilidade, criatividade e espírito colaborativo, o DragonSoul une os
+                melhores em tecnologia, estratégia e inovação. Cada integrante é como um dragão: determinado, resiliente
+                e pronto para voar mais alto a cada desafio.
+
+                Mais que um time — uma lenda em construção. 🐉</p>
         </div>
-
-        <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
+        <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/X4wge_avH2s?si=rvfRjkjnz0aC-Av0"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+        </div>
+
+
+    </section>
+
+    <section>
+        <h2>Membros</h2>
+
+        <div class="categoria-video">
+
+            <a href="<iframe width=" 560" height="315"
+                src="https://www.youtube.com/embed/6diMpCgmdEE?si=m-2zMncGJmJkaknm" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                " &gt; <img src="https://img.youtube.com/vi/Rvts4Btgkxs/maxresdefault.jpg" &gt; </a>
+                <a href="<iframe width=" 560" height="315"
+                    src="https://www.youtube.com/embed/iPKSbs_jtdw?si=9OkxZsdiIrQNZWao" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    " &gt; <img src="https://img.youtube.com/vi/Rvts4Btgkxs/maxresdefault.jpg" &gt; </a>
+                    <a href="<iframe width=" 560" height="315"
+                        src="https://www.youtube.com/embed/W1zgen5kW-4?si=w2p1k_1DBTM95mkZ" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        " &gt; <img src="https://img.youtube.com/vi/Rvts4Btgkxs/maxresdefault.jpg" &gt; </a>
+                        <a href="<iframe width=" 560" height="315"
+                            src="https://www.youtube.com/embed/C5Bq3K6UBes?si=nCmjYa8bl4tnd5Op"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            " &gt; <img src="https://img.youtube.com/vi/Rvts4Btgkxs/maxresdefault.jpg" &gt; </a>
+                            <a href="<iframe width=" 560" height="315"
+                                src="https://www.youtube.com/embed/SBjcKCvFqXg?si=lELgQXAqL0qy1XB9"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                " &gt; <img src="https://img.youtube.com/vi/Rvts4Btgkxs/maxresdefault.jpg" &gt; </a>
+
+
         </div>
     </section>
 
-    <section class="categoria">
-        <h2>Filmes e séries</h2>
-        <div class="categoria-videos">
-            <a href="<iframe width="560" height="315" src="https://www.youtube.com/embed/X4wge_avH2s?si=rvfRjkjnz0aC-Av0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>">
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
-            </a>
-        </div>
-    </section>
+    
 
 </body>
 
