--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
     <section class="menu">
         <div class="texto">
             <a href="form.html">#Historia Completa De Berserk</a>
-            <p class="texto-resumo">🔥 <b>DragonSoul</b> é o time de elite da LigaAlfaTech, formado por mentes
-                brilhantes e corações indomáveis.
-                Criado para representar o ápice da habilidade, criatividade e espírito colaborativo, o DragonSoul une os
-                melhores em tecnologia, estratégia e inovação. Cada integrante é como um dragão: determinado, resiliente
-                e pronto para voar mais alto a cada desafio.
+            <p class="texto-resumo">🔥 <b>Historia Completa De Berserk</b> Berserk segue Guts, o "Espadachim Negro", um mercenário solitário com uma marca que atrai demónios.
+                 em sua busca por vingança contra Griffith, seu antigo e traiçoeiro líder e amigo, enquanto enfrenta a escuridão e o destino em um mundo brutal e de fantasia sombria.
+                 A história aborda temas como livre arbítrio, a natureza do mal e a luta interna contra a própria escuridão, através da jornada de Guts pela Europa medieval em um mundo onde demónios e fadas são reais. 
 
-                Mais que um time — uma lenda em construção. 🐉</p>
+                </p>
         </div>
         <div class="video">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/X4wge_avH2s?si=rvfRjkjnz0aC-Av0"
