--- a/index.html
+++ b/index.html
@@ -40,41 +40,26 @@
 
         <div class="categoria-video">
 
-            <a href="<iframe width=" 560" height="315"
-                src="https://www.youtube.com/embed/6diMpCgmdEE?si=m-2zMncGJmJkaknm" title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                " &gt; <img src="https://img.youtube.com/vi/Rvts4Btgkxs/maxresdefault.jpg" &gt; </a>
-                <a href="<iframe width=" 560" height="315"
-                    src="https://www.youtube.com/embed/iPKSbs_jtdw?si=9OkxZsdiIrQNZWao" title="YouTube video player"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    " &gt; <img src="https://img.youtube.com/vi/Rvts4Btgkxs/maxresdefault.jpg" &gt; </a>
-                    <a href="<iframe width=" 560" height="315"
-                        src="https://www.youtube.com/embed/W1zgen5kW-4?si=w2p1k_1DBTM95mkZ" title="YouTube video player"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        " &gt; <img src="https://img.youtube.com/vi/Rvts4Btgkxs/maxresdefault.jpg" &gt; </a>
-                        <a href="<iframe width=" 560" height="315"
-                            src="https://www.youtube.com/embed/C5Bq3K6UBes?si=nCmjYa8bl4tnd5Op"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                            " &gt; <img src="https://img.youtube.com/vi/Rvts4Btgkxs/maxresdefault.jpg" &gt; </a>
-                            <a href="<iframe width=" 560" height="315"
-                                src="https://www.youtube.com/embed/SBjcKCvFqXg?si=lELgQXAqL0qy1XB9"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                                " &gt; <img src="https://img.youtube.com/vi/Rvts4Btgkxs/maxresdefault.jpg" &gt; </a>
+           <a href="https://youtu.be/yGl9DbbsTkE?si=tjpFVYZS9oThJ1ao"&gt;
+                <img src="https://img.youtube.com/vi/Rvts4Btgkxs/maxresdefault.jpg"&gt;
+            </a>
+            <a href="https://youtu.be/yGl9DbbsTkE?si=tjpFVYZS9oThJ1ao"&gt;
+                <img src="https://img.youtube.com/vi/Rvts4Btgkxs/maxresdefault.jpg"&gt;
+            </a>
+            <a href="https://youtu.be/yGl9DbbsTkE?si=tjpFVYZS9oThJ1ao"&gt;
+                <img src="https://img.youtube.com/vi/Rvts4Btgkxs/maxresdefault.jpg"&gt;
+            </a>
+            <a href="https://youtu.be/yGl9DbbsTkE?si=tjpFVYZS9oThJ1ao"&gt;
+                <img src="https://img.youtube.com/vi/Rvts4Btgkxs/maxresdefault.jpg"&gt;
+            </a>
+            <a href="https://youtu.be/yGl9DbbsTkE?si=tjpFVYZS9oThJ1ao"&gt;
+                <img src="https://img.youtube.com/vi/Rvts4Btgkxs/maxresdefault.jpg"&gt;
+            </a>
 
-
+       
         </div>
     </section>
-
+     
     <footer>
         miguel luinguica
 
