--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/icon.jpg" type="image/png">
-    <link rel="stylesheet" href="primeiro_ano.css">
+    <link rel="stylesheet" href="style.css">
     <title>AluraFlix</title>
 </head>
 
@@ -17,7 +17,7 @@
     <section class="menu">
         <div class="texto">
             <a href="form.html">#Historia Completa De Berserk</a>
-            <p class="texto-resumo">🔥 <b>Historia Completa De Berserk</b> Berserk segue Guts, o "Espadachim Negro", um mercenário solitário com uma marca que atrai demónios.
+            <p class="texto-resumo"> <b>Historia Completa De Berserk</b> Berserk segue Guts, o "Espadachim Negro", um mercenário solitário com uma marca que atrai demónios.
                  em sua busca por vingança contra Griffith, seu antigo e traiçoeiro líder e amigo, enquanto enfrenta a escuridão e o destino em um mundo brutal e de fantasia sombria.
                  A história aborda temas como livre arbítrio, a natureza do mal e a luta interna contra a própria escuridão, através da jornada de Guts pela Europa medieval em um mundo onde demónios e fadas são reais. 
 
